Update full functional cardgame "21"

--- a/cardgame/css/style.css
+++ b/cardgame/css/style.css
@@ -3,19 +3,49 @@ body {
     margin: 0;
     background-image: url(https://st3.depositphotos.com/4072575/15577/i/110/depositphotos_155774886-stock-photo-poker-table-felt-background-seamless.jpg);
 }
+.welcome-box {
+    display: none;
+}
+.welcome-box.active {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    z-index: 100;
+}
+.welcome-box:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background-color: #000;
+    opacity: .5;
+    z-index: -1;
+}
+.welcome-content {
+    margin-top: 250px;
+    color: #fff;
+}
 .card-board {
     position: relative;
     width: 100vw;
     height: 100vh;
 }
-.card-pack {
+.cards-box {
     position: absolute;
     top: calc(60% - 100px);
     left: 10px;
     height: 200px;
     width: 152px;
 }
-.card-pack .card {
+.cards-box .card {
     position: absolute;
     top: 0;
     border: 1px solid #000;
@@ -33,10 +63,14 @@ body {
 .card .color {
     opacity: 0;
 }
-.computer-board,
-.player-board {
+.player-place,
+.computer-place {
     position: absolute;
-    left: calc(50% - 456px);
+    width: 100%;
+}
+.computer-place-cards,
+.player-place-cards {
+    margin: 0 auto;
     width: 912px;
     height: 180px;
     padding: 0 10px;
@@ -48,30 +82,31 @@ body {
     -moz-box-shadow: inset 0px 0px 14px 0px rgb(0, 0, 0);
     box-shadow: inset 0px 0px 14px 0px rgb(0, 0, 0);
 }
-.player-board { bottom: 10px; }
-.computer-board { top: 10px; }
-.player-board .card,
-.computer-board .card {
+.player-place { bottom: 10px; }
+.computer-place { top: 10px; }
+.player-place .card,
+.computer-place .card {
     position: relative;
     top: 0 !important;
     background: #ffffff;
 }
-.player-board .card:last-child, 
-.computer-board .card:last-child {
+.player-place .card:last-child, 
+.computer-place .card:last-child {
     margin-right: 0;
 }
-.player-board .card .value,
-.player-board .card .color,
-.computer-board .card .color,
-.computer-board .card .value {
+.player-place .card .value,
+.player-place .card .color,
+.computer-place .card .color,
+.computer-place .card .value {
+    display: block;
     opacity: 1;
 }
-.computer-board .card:first-child {
+.computer-place .card:first-child {
     background-image: url('https://i.pinimg.com/474x/11/b3/82/11b3825d2fef633c61c4aa5953dd6ce2.jpg');
     background-position: center;
 }
-.computer-board .card:first-child .value,
-.computer-board .card:first-child .color {
+.computer-place .card:first-child .value,
+.computer-place .card:first-child .color {
     opacity: 0;
 }
 .control-btn {
@@ -84,7 +119,7 @@ body {
     width: 150px;
     margin-bottom: 5px;
 }
-.result-player {
+.player-place .score-box {
     position: absolute;
     right: 75px;
     bottom: 100px;
@@ -93,6 +128,6 @@ body {
 }
 .card-content {
     position: absolute;
-    top: 20px;
-    left: 20px;
+    top: 5px;
+    left: 10px;
 }
