--- a/cardgame/css/style.css
+++ b/cardgame/css/style.css
@@ -19,7 +19,8 @@ body {
     background-image: url(https://st3.depositphotos.com/4072575/15577/i/110/depositphotos_155774886-stock-photo-poker-table-felt-background-seamless.jpg)
 }
 .control-btn button:focus,
-.start-game-btn:focus { 
+.start-game-btn:focus,
+.option button:focus { 
     outline: none;
 }
 .welcome-box,
@@ -160,7 +161,8 @@ body {
     right: 15px;
     bottom: 6px;
 }
-.control-btn button {
+.control-btn button,
+.option button {
     display: block;
     width: 155px;
     height: 30px;
@@ -174,7 +176,8 @@ body {
     box-shadow: 0px 6px 0px 0px #b5a11c;
 }
 
-.control-btn button:hover {
+.control-btn button:hover,
+.option button:hover {
     background-color: #63B931;
     color: #ffffff;
     box-shadow: 0px 6px 0px 0px  rgb(67, 128, 29);
@@ -231,9 +234,9 @@ body {
     margin-right: 5px;
 }
 .restart-card-btn { position: relative; }
-.name-form {
+.name-field {
     position: relative;
-    width: 350px;
+    width: 325px;
     margin: auto;
 }
 .name-input {
@@ -241,8 +244,9 @@ body {
     background: transparent;
     border-bottom: 2px solid #fff;
     width: 100%;
+    padding-right: 30px;
     padding-bottom: 5px;
-    font: 400 16px 'Montserrat';
+    font: 400 14px 'Montserrat';
     letter-spacing: 2px;
     color: #ffffff;
     transition: all .4s;
@@ -252,19 +256,48 @@ body {
     border-bottom-color: #F6D600; 
 }
 .name-input::-webkit-input-placeholder { color: #eeeeee; }
-.start-game-btn {
+.name-field i.material-icons {
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right: 0;
+    top: -2px;
+    right: -30px;
     border: none;
     background: transparent;
     padding: 0;
     vertical-align: middle;
-    cursor: pointer;
-}
-.start-game-btn i.material-icons {
     font-size: 24px;
     color: #ffffff;
 }
-.start-game-btn:hover i.material-icons { color: #F6D600; }
+.option {
+    position: absolute;
+    width: 200px;
+    top: -120px;
+    left: calc(50% - 100px);
+    background-color: #ffffff;
+    text-align: center;
+    padding: 15px 15px 20px 15px;
+    opacity: 0;
+    border-radius: 10px;
+    box-sizing: border-box;
+}
+.option:before {
+    content: '';
+    position: absolute;
+    bottom: -40px;
+    border: 20px solid transparent;
+    border-top: 20px solid #fff;
+    left: calc(50% - 20px);
+}
+.option button {
+    display: inline-block;
+    width: 80px;
+    margin-bottom: 0;
+}
+.option.active {
+    opacity: 1;
+}
+.option p {
+    margin: 0;
+    margin-bottom: 10px;
+    color: #000000;
+    font-size: 14px;
+}
