--- a/cardgame/css/style.css
+++ b/cardgame/css/style.css
@@ -13,7 +13,7 @@
     direction: ltr;
   }
 body {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat', sans-serif;
     margin: 0;
     padding: 0;
     background-image: url(https://st3.depositphotos.com/4072575/15577/i/110/depositphotos_155774886-stock-photo-poker-table-felt-background-seamless.jpg)
